# stt2desktop

./: README.md  cli.py  dev-cli.py  pyproject.toml
.github/workflows/: tests.yml
.run/: Template Python tests.run.xml  Unittests __all__.run.xml
stt2desktop/: __init__.py  __main__.py  constants.py  get_bin.py  stt.py
stt2desktop/cli_app/: __init__.py  listen.py
stt2desktop/cli_dev/: __init__.py  __main__.py  code_style.py  packaging.py  testing.py  update_readme_history.py
stt2desktop/tests/: __init__.py  test_doctests.py  test_project_setup.py  test_readme.py
stt2kde/: __init__.py  __main__.py  constants.py
stt2kde/cli_app/: __init__.py
stt2kde/cli_dev/: __init__.py  __main__.py  code_style.py  packaging.py  testing.py  update_readme_history.py
stt2kde/tests/: __init__.py  test_doctests.py  test_project_setup.py  test_readme.py
